fix stupid hardcodings

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
         <meta charset="UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <meta name="home-url" content="https://mariam-dzamashvili.com"/>
+        <meta name="variable-home-url" content=""/>
+        <meta name="variable-projects-path" content="/home/projects/"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
         <link rel="preload" href="https://use.typekit.net/zdo1npz.css" as="style"/>
         <link rel="stylesheet" href="https://use.typekit.net/zdo1npz.css">
-        <link rel="preload" href="/style.css" as="style"/>
-        <link rel="preload" href="/script.js" as="script" />
-        <link rel="preload" href="/jquery.js" as="script" />
-        <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=latin" rel="stylesheet">
+        <link rel="preload" href="style.css" as="style"/>
+        <link rel="preload" href="script.js" as="script" />
+        <link rel="preload" href="jquery.js" as="script" />
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=latin" rel="stylesheet">
         <style id='classic-theme-styles-inline-css' type='text/css'>
             /*! This file is auto-generated */
             .wp-block-button__link {
@@ -387,8 +389,8 @@
                 line-height: 1.6;
             }
         </style>
-        <link rel='stylesheet' id='ok-civ-css' href='/style.css' type='text/css' media='all'/>
-        <!-- Hotjar Tracking Code for mariam-dzamashvili -->
+        <link rel='stylesheet' id='ok-civ-css' href='style.css' type='text/css' media='all'/>
+        
         <script>
             (function(h, o, t, j, a, r) {
                 h.hj = h.hj || function() {
@@ -411,7 +413,7 @@
     <body data-rsssl=1 class="first-load" data-loading="true">
         <a class="skip-to-content" href="#content">Skip to Content</a>
         <header id="header" class="main-header" role="banner">
-          <a href="https://mariam-dzamashvili.com/" class="header-logo" id="header-logo">
+          <a href="/" class="header-logo" id="header-logo">
             <h1>Team Four</h1>
           </a>
             <button class="menu-button" id="menu-button" type="button" aria-label="Menu" aria-controls="main-menu">
@@ -426,7 +428,7 @@
 
                     <h6>
 
-                        <a href="https://mariam-dzamashvili.com/#projects" style="font-size: large;" data-clear-cookies>პროექტები</a>
+                        <a href="#projects" style="font-size: large;" data-clear-cookies>პროექტები</a>
 
                     </h6>
 
@@ -434,19 +436,19 @@
 
                         <li>
 
-                            <a href="https://mariam-dzamashvili.com/?type=apartment" style="font-size: medium;padding-left: 20;" data-clear-cookies>ბინა</a>
+                            <a href="/?type=apartment" style="font-size: medium;padding-left: 20;" data-clear-cookies>ბინა</a>
 
                         </li>
 
                         <li>
 
-                            <a href="https://mariam-dzamashvili.com/?type=private-house" style="font-size: medium;padding-left: 20;" data-clear-cookies>სახლი</a>
+                            <a href="/?type=private-house" style="font-size: medium;padding-left: 20;" data-clear-cookies>სახლი</a>
 
                         </li>
 
                         <li>
 
-                            <a href="https://mariam-dzamashvili.com/?type=commercial" style="font-size: medium;padding-left: 20;" data-clear-cookies>კომერციული</a>
+                            <a href="/?type=commercial" style="font-size: medium;padding-left: 20;" data-clear-cookies>კომერციული</a>
 
                         </li>
 
@@ -454,7 +456,7 @@
 
                     <h6>
 
-                        <a href="https://mariam-dzamashvili.com/Contact/" style="font-size: large;" data-clear-cookies>კონტაქტი</a>
+                        <a href="/Contact/" style="font-size: large;" data-clear-cookies>კონტაქტი</a>
 
                     </h6>
 
@@ -466,9 +468,9 @@
                 
                     <section class="hero home-hero offblack-bg white-text" id="home-hero">
                       <div class="fullscreen">
-                          <a href="/projects/apartment/ბინა იქსორი/" class="fixed-wrap fixed" data-clear-cookies>
+                          <a href="./projects/apartment/ბინა იქსორი/" class="fixed-wrap fixed" data-clear-cookies>
                               <div class="slide-image object-cover">
-                                  <img class="landscape-image" alt="ბინა იქსორი" data-sizes="auto" src="/images/apartment/ბინა იქსორი/main.jpg.webp"/>
+                                  <img class="landscape-image" alt="ბინა იქსორი" data-sizes="auto" src="images/apartment/ბინა იქსორი/main.jpg.webp"/>
                               </div>
                               <div class="slide-text over-image">
                                   <div class="wrap text-wrap align-center">
@@ -479,9 +481,9 @@
                           </a>
                       </div>
                       <div class="fullscreen">
-                          <a href="/projects/apartment/ბინა იქსორი/" class="fixed-wrap fixed" data-clear-cookies>
+                          <a href="./projects/apartment/ბინა იქსორი/" class="fixed-wrap fixed" data-clear-cookies>
                               <div class="slide-image object-cover">
-                                  <img class="landscape-image" alt="ბინა იქსორი" data-sizes="auto" src="/images/apartment/ბინა იქსორი/r (30).jpg.webp"/>
+                                  <img class="landscape-image" alt="ბინა იქსორი" data-sizes="auto" src="images/apartment/ბინა იქსორი/r (30).jpg.webp"/>
                               </div>
                               <div class="slide-text over-image">
                                   <div class="wrap text-wrap align-center">
@@ -492,9 +494,9 @@
                           </a>
                       </div>
                         <div class="fullscreen">
-                            <a href="/projects/apartment/Park Home ვაკე/" class="fixed-wrap fixed" data-clear-cookies>
+                            <a href="./projects/apartment/Park Home ვაკე/" class="fixed-wrap fixed" data-clear-cookies>
                                 <div class="slide-image object-cover">
-                                    <img class="landscape-image" alt="Park Home ვაკე" data-sizes="auto" src="/images/apartment/Park Home ვაკე/main.jpg.webp"/>
+                                    <img class="landscape-image" alt="Park Home ვაკე" data-sizes="auto" src="images/apartment/Park Home ვაკე/main.jpg.webp"/>
                                 </div>
                                 <div class="slide-text over-image">
                                     <div class="wrap text-wrap align-center">
@@ -505,9 +507,9 @@
                             </a>
                         </div>
                       <div class="fullscreen">
-                          <a href="/projects/apartment/ბინა არტ ჰოლთან/" class="fixed-wrap fixed" data-clear-cookies>
+                          <a href="./projects/apartment/ბინა არტ ჰოლთან/" class="fixed-wrap fixed" data-clear-cookies>
                               <div class="slide-image object-cover">
-                                  <img class="landscape-image" alt="ბინა არტ ჰოლთან" data-sizes="auto" src="/images/apartment/ბინა არტ ჰოლთან/main.jpg.webp"/>
+                                  <img class="landscape-image" alt="ბინა არტ ჰოლთან" data-sizes="auto" src="images/apartment/ბინა არტ ჰოლთან/main.jpg.webp"/>
                               </div>
                               <div class="slide-text over-image">
                                   <div class="wrap text-wrap align-center">
@@ -518,9 +520,9 @@
                           </a>
                       </div>
                       <div class="fullscreen">
-                          <a href="/projects/apartment/ბინა 'ბახტრიონი'/" class="fixed-wrap fixed" data-clear-cookies>
+                          <a href="./projects/apartment/ბინა 'ბახტრიონი'/" class="fixed-wrap fixed" data-clear-cookies>
                               <div class="slide-image object-cover">
-                                  <img class="landscape-image" alt="ბინა 'ბახტრიონი'" data-sizes="auto" src="/images/apartment/ბინა 'ბახტრიონი'/main.jpg.webp"/>
+                                  <img class="landscape-image" alt="ბინა 'ბახტრიონი'" data-sizes="auto" src="images/apartment/ბინა 'ბახტრიონი'/main.jpg.webp"/>
                               </div>
                               <div class="slide-text over-image">
                                   <div class="wrap text-wrap align-center">
@@ -531,9 +533,9 @@
                           </a>
                       </div>
                       <div class="fullscreen">
-                          <a href="/projects/apartment/ბინა იქსორი/" class="fixed-wrap fixed" data-clear-cookies>
+                          <a href="./projects/apartment/ბინა იქსორი/" class="fixed-wrap fixed" data-clear-cookies>
                               <div class="slide-image object-cover">
-                                  <img class="landscape-image" alt="ბინა იქსორი" data-sizes="auto" src="/images/apartment/ბინა იქსორი/r (15).jpg.webp"/>
+                                  <img class="landscape-image" alt="ბინა იქსორი" data-sizes="auto" src="images/apartment/ბინა იქსორი/r (15).jpg.webp"/>
                               </div>
                               <div class="slide-text over-image">
                                   <div class="wrap text-wrap align-center">
@@ -544,9 +546,9 @@
                           </a>
                       </div>
                       <div class="fullscreen">
-                          <a href="/projects/apartment/ბინა კიკვიძის პარკთან/" class="fixed-wrap fixed" data-clear-cookies>
+                          <a href="./projects/apartment/ბინა კიკვიძის პარკთან/" class="fixed-wrap fixed" data-clear-cookies>
                               <div class="slide-image object-cover">
-                                  <img class="landscape-image" alt="ბინა კიკვიძის პარკთან" data-sizes="auto" src="/images/apartment/ბინა კიკვიძის პარკთან/main.jpg.webp"/>
+                                  <img class="landscape-image" alt="ბინა კიკვიძის პარკთან" data-sizes="auto" src="images/apartment/ბინა კიკვიძის პარკთან/main.jpg.webp"/>
                               </div>
                               <div class="slide-text over-image">
                                   <div class="wrap text-wrap align-center">
@@ -642,13 +644,13 @@
             <div bis_skin_checked="1">
                     <a target="_blank" href="https://www.facebook.com/people/TeamFour-Design/100063509800435/" rel="noreferrer">
                         <div style="display: flex; justify-content: left; align-items: center;" bis_skin_checked="1">
-                              <img src="/favicon-facebook.png" style="width: 18px;height: 18px;margin-right: 5px;">
+                              <img src="favicon-facebook.png" style="width: 18px;height: 18px;margin-right: 5px;">
                             <span>TeamFour Design</span>
                         </div>
                     </a>
                     <a target="_blank" href="https://www.instagram.com/team4architects/" rel="noreferrer">
                         <div style="display: flex; justify-content: left; align-items: center;" bis_skin_checked="1">
-                              <img src="/favicon-instagram.jpg" style="width: 18px; height: 18px;margin-right: 5px;">
+                              <img src="favicon-instagram.jpg" style="width: 18px; height: 18px;margin-right: 5px;">
                             <span>team4architects</span>
                         </div>
                     </a>
@@ -666,8 +668,8 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript" src="/jquery.js" id="jquery-js"></script>
-        <script type="text/javascript" src="/script.js" id="v2_scripts-js"></script>
+        <script type="text/javascript" src="jquery.js" id="jquery-js"></script>
+        <script type="text/javascript" src="script.js" id="v2_scripts-js"></script>
         <!-- <script src="//instant.page/1.1.0" type="module" integrity="sha384-EwBObn5QAxP8f09iemwAJljc+sU+eUXeL9vSBw1eNmVarwhKk2F9vBEpaN9rsrtp"></script> -->
     </body>
 </html>
