--- a/projects/apartment/Park Home ვაკე/index.html
+++ b/projects/apartment/Park Home ვაკე/index.html
@@ -566,7 +566,7 @@
             <!-- </div> -->
         </div>
         <div class="content-wrap" id="content-wrap">
-            <div class="content" id="content" data-pagename="Olson Kundig — Palms Residence" data-url="https://mariam-dzamashvili.com/projects/apartment/Park Home ვაკე/">
+            <div class="content" id="content" data-pagename="Olson Kundig — Palms Residence" data-url="./projects/apartment/Park Home ვაკე/">
                 <section class="hero project-hero deepblack-bg" id="project-hero">
                     <div class="fullscreen">
                         <div class="slideshow">
