move files around

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <link rel="preload" href="https://use.typekit.net/zdo1npz.css" as="style" />
     <link rel="stylesheet" href="https://use.typekit.net/zdo1npz.css">
-    <link rel="preload" href="style.css" as="style" />
-    <link rel="preload" href="script.js" as="script" />
-    <link rel="preload" href="jquery.js" as="script" />
+    <link rel="preload" href="resources/style.css" as="style" />
+    <link rel="preload" href="resources/script.js" as="script" />
+    <link rel="preload" href="resources/jquery.js" as="script" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=latin" rel="stylesheet">
     <style id='classic-theme-styles-inline-css' type='text/css'>
         /*! This file is auto-generated */
@@ -398,7 +398,7 @@
             line-height: 1.6;
         }
     </style>
-    <link rel='stylesheet' id='ok-civ-css' href='style.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='ok-civ-css' href='resources/style.css' type='text/css' media='all' />
 
     <script>
         (function (h, o, t, j, a, r) {
@@ -483,7 +483,8 @@
             <section class="hero home-hero offblack-bg white-text" id="home-hero">
 
                 <div class="fullscreen">
-                    <a href="#/projects/apartment/Park Home ვაკე/" class="fixed-wrap fixed" data-clear-cookies>
+                    <a href="#/projects/apartment/Park Home ვაკე/" class="fixed-wrap fixed" data-clear-cookies
+                        data-project="Park Home ვაკე">
                         <div class="slide-image object-cover">
                             <img class="landscape-image" alt="Park Home ვაკე" data-sizes="auto"
                                 src="images/apartment/Park Home ვაკე/main.webp" />
@@ -669,13 +670,13 @@
         <div bis_skin_checked="1">
             <a target="_blank" href="https://www.facebook.com/people/TeamFour-Design/100063509800435/" rel="noreferrer">
                 <div style="display: flex; justify-content: left; align-items: center;" bis_skin_checked="1">
-                    <img src="favicon-facebook.png" style="width: 18px;height: 18px;margin-right: 5px;">
+                    <img src="i/favicon-facebook.png" style="width: 18px;height: 18px;margin-right: 5px;">
                     <span>TeamFour Design</span>
                 </div>
             </a>
             <a target="_blank" href="https://www.instagram.com/team4architects/" rel="noreferrer">
                 <div style="display: flex; justify-content: left; align-items: center;" bis_skin_checked="1">
-                    <img src="favicon-instagram.jpg" style="width: 18px; height: 18px;margin-right: 5px;">
+                    <img src="i/favicon-instagram.jpg" style="width: 18px; height: 18px;margin-right: 5px;">
                     <span>team4architects</span>
                 </div>
             </a>
@@ -693,8 +694,9 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="jquery.js" id="jquery-js"></script>
-    <script type="text/javascript" src="script.js" id="v2_scripts-js"></script>
+    <script type="text/javascript" src="resources/jquery.js" id="jquery-js"></script>
+    <script type="text/javascript" src="resources/script.js" id="v2_scripts-js"></script>
+    <script type="text/javascript" src="images/data.js"></script>
     <script src="https://unpkg.com/mustache@latest"></script>
 
 </body>
