--- a/projects/project-view-template.html
+++ b/projects/project-view-template.html
@@ -5,7 +5,7 @@
                 <div class="slideshow">
                     <div class="slide">
                         <div class="slide-image object-cover">
-                            <img class="lazyload" data-src="/images/{{category}}/{{name}}/main.webp" />
+                            <img class="lazyload" data-src="/projects/images/{{category}}/{{name}}/main.webp" />
                             <div class="caption">
                                 <h5>{{photography_by}}</h5>
                             </div>
