fix main page link

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 <body data-rsssl=1 class="first-load" data-loading="true">
     <a class="skip-to-content" href="#content">Skip to Content</a>
     <header id="header" class="main-header" role="banner">
-        <a href="/" class="header-logo" id="header-logo">
+        <a href="/" class="header-logo" id="header-logo" onclick="location.href='/'">
             <h1>Team Four</h1>
         </a>
         <button class="menu-button" id="menu-button" type="button" aria-label="Menu" aria-controls="main-menu">
