--- a/index.html
+++ b/index.html
@@ -569,13 +569,13 @@
         <div bis_skin_checked="1">
             <a target="_blank" href="https://www.facebook.com/people/TeamFour-Design/100063509800435/" rel="noreferrer">
                 <div style="display: flex; justify-content: left; align-items: center;" bis_skin_checked="1">
-                    <img src="i/favicon-facebook.png" style="width: 18px;height: 18px;margin-right: 5px;">
+                    <img src="/i/favicon-facebook.png" style="width: 18px;height: 18px;margin-right: 5px;">
                     <span>TeamFour Design</span>
                 </div>
             </a>
             <a target="_blank" href="https://www.instagram.com/team4architects/" rel="noreferrer">
                 <div style="display: flex; justify-content: left; align-items: center;" bis_skin_checked="1">
-                    <img src="i/favicon-instagram.jpg" style="width: 18px; height: 18px;margin-right: 5px;">
+                    <img src="/i/favicon-instagram.jpg" style="width: 18px; height: 18px;margin-right: 5px;">
                     <span>team4architects</span>
                 </div>
             </a>
