fix two footers

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                                     <option value="commercial">კომერციული</option>
                                 </select>
 
-                            <label for="select-type">Project Type</label>
+                            <label for="select-type">პროექტის ტიპი</label>
                             </div>
                         </nav>
 
@@ -585,10 +585,9 @@
     <div class="modal error-modal carbon-bg white-text" id="error-modal">
         <div class="modal-wrap">
             <div class="wrap text-wrap align-center">
-                <h2>Something isn't loading properly.</h2>
+                <h2>დაფიქსირდა შეცდომა... ასეთებიც ხდება. გვაპატიეთ.</h2>
                 <p>
-                    Please <a href="#go-back">go back</a>
-                    and try again, or use the main menu above.
+                    დაბრუნდით უკან <a href="#go-back">ამ ბმულზე დაკლიკებით</a>
                 </p>
             </div>
         </div>
