--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             style="background: linear-gradient(90deg, rgba(255, 255, 255, 0) 70%, rgba(0, 0, 0, 0.6) 85%, rgba(0, 0, 0, 0.05) 100%);">
             <li style="float: right;">
                 <h6>
-                    <a href="#projects" style="font-size: large;" data-clear-cookies>პროექტები</a>
+                    <a href="#projects" style="font-size: large;" class="link-to-uri-fragment">პროექტები</a>
                 </h6>
                 <ul>
                     <li>
@@ -453,7 +453,7 @@
                     </li>
                 </ul>
                 <h6>
-                    <a href="/Contact/" style="font-size: large;" data-clear-cookies>კონტაქტი</a>
+                    <a href="#footer" style="font-size: large;" class="link-to-uri-fragment">კონტაქტი</a>
                 </h6>
             </li>
         </ul>
