meta app-version

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="variable-home-url" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta app-version="1.0" />
 
     <link rel="preload" href="https://use.typekit.net/zdo1npz.css" as="style" />
     <link rel="stylesheet" href="https://use.typekit.net/zdo1npz.css">
@@ -420,7 +421,6 @@
 </head>
 
 <body data-rsssl=1 class="first-load" data-loading="true">
-    <a class="skip-to-content" href="#content">Skip to Content</a>
     <header id="header" class="main-header" role="banner">
         <a href="/" class="header-logo" id="header-logo" onclick="location.href='/'">
             <h1>Team Four</h1>
