--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="variable-home-url" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="icon" href="/i/favicon.ico" />
     <meta app-version="1.0" />
 
     <link rel="preload" href="https://use.typekit.net/zdo1npz.css" as="style" />
