fix black burger menu icon

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preload" href="resources/script.js" as="script" />
     <link rel="preload" href="resources/jquery.js" as="script" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=latin" rel="stylesheet">
+    <link rel="icon" href="/i/favicon.ico" />
     <style id='classic-theme-styles-inline-css' type='text/css'>
         /*! This file is auto-generated */
         .wp-block-button__link {
@@ -476,7 +477,7 @@
             </div>
         </template>
     </div>
-    
+
     <div class="content-wrap" id="content-wrap">
         <div class="content" id="content" data-pagename="Lorem Ipsum.">
 
