--- a/projects/project-view-template.html
+++ b/projects/project-view-template.html
@@ -1,5 +1,5 @@
 <div class="content-wrap" id="content-wrap">
-    <div class="content" id="content" data-pagename="{{NAME}}" data-url="#/projects/{{category}}/{{name}}/">
+    <div class="content" id="content" data-pagename="{{name}}" data-url="#/projects/{{category}}/{{name}}/">
         <section class="hero project-hero deepblack-bg" id="project-hero">
             <div class="fullscreen">
                 <div class="slideshow">
