--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
             <i></i>
             <i></i>
         </button>
+
+        <button class="close-project-view-button">
+            <i></i>
+            <i></i>
+            <i></i>
+        </button>
     </header>
     <menu class="main-menu" id="menu" role="navigation" style="background-color: transparent;">
         <ul class="site-menu body-copy"
