--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <i></i>
         </button>
 
-        <button class="close-project-view-button">
+        <button class="close-project-view-button" onclick="location.href='/'">
             <i></i>
             <i></i>
             <i></i>
