fix project links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="variable-home-url" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="icon" href="/i/favicon.ico" />
+    <link rel="icon" href="/i/favicon.ico" />
     <meta app-version="1.0-with-app.css-removed" />
 
     <link rel="preload" href="https://use.typekit.net/zdo1npz.css" as="style" />
@@ -84,16 +84,13 @@
                 </h6>
                 <ul>
                     <li>
-                        <a href="/?type=apartment" style="font-size: medium;padding-left: 20;"
-                            data-clear-cookies>ბინა</a>
+                        <a href="" data-project-type="apartment" class="project-type-link" data-clear-cookies>ბინა</a>
                     </li>
                     <li>
-                        <a href="/?type=private-house" style="font-size: medium;padding-left: 20;"
-                            data-clear-cookies>სახლი</a>
+                        <a href="" data-project-type="private-house" class="project-type-link" data-clear-cookies>სახლი</a>
                     </li>
                     <li>
-                        <a href="/?type=commercial" style="font-size: medium;padding-left: 20;"
-                            data-clear-cookies>კომერციული</a>
+                        <a href="" data-project-type="commercial" class="project-type-link" data-clear-cookies>კომერციული</a>
                     </li>
                 </ul>
                 <h6>
@@ -127,7 +124,7 @@
             <section class="hero home-hero offblack-bg white-text" id="home-hero">
 
             </section>
-            
+
             <div class="safari-fix" id="safari-fix"></div>
 
             <section class="carbon-bg white-text home-mission" id="home-mission">
@@ -169,7 +166,7 @@
                                     <option value="commercial">კომერციული</option>
                                 </select>
 
-                            <label for="select-type">პროექტის ტიპი</label>
+                                <label for="select-type">პროექტის ტიპი</label>
                             </div>
                         </nav>
 
