--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div>
         <template id="homepage-project-template">
             <div class="fullscreen">
-                <a href="#/projects/{{category}}/{{name}}/" class="fixed-wrap fixed" data-clear-cookies>
+                <a href="#/projects/{{category}}/{{name}}/" class="fixed-wrap fixed slideshow-opener-button" data-clear-cookies>
                     <div class="slide-image object-cover">
                         <img class="landscape-image" alt="{{name}}" data-sizes="auto"
                             src="projects/images/{{category}}/{{name}}/main.webp" />
