--- a/projects/projects-grid-template.html
+++ b/projects/projects-grid-template.html
@@ -5,7 +5,7 @@
             data-src="/projects/images/{{category}}/{{name}}/main.webp" />
     </div>
     <div class="grid-text align-center">
-        <a href="/#/projects/{{category}}/{{name}}/">
+        <a href="/#/projects/{{category}}/{{name}}/" class="slideshow-opener-button">
             <h3>{{name}}</h3>
             <h5>{{location}}</h5>
         </a>
