--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="variable-home-url" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" href="/i/favicon.ico" />
     <meta app-version="1.0-with-app.css-removed" />
 
     <link rel="preload" href="https://use.typekit.net/zdo1npz.css" as="style" />
     <link rel="stylesheet" href="https://use.typekit.net/zdo1npz.css">
-    <link rel="preload" href="resources/style.css" as="style" />
-    <link rel="preload" href="resources/script.js" as="script" />
+    <link rel="preload" href="resources/style.css?v=11-27-2024" as="style" />
+    <link rel='stylesheet' id='ok-civ-css' href='resources/style.css?v=11-27-2024' type='text/css' media='all' />
+    <link rel="preload" href="resources/script.js?v=11-27-2024" as="script" />
     <link rel="preload" href="resources/jquery.js" as="script" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=latin" rel="stylesheet">
     <link rel="icon" href="/i/favicon.ico" />
@@ -35,9 +36,6 @@
             text-decoration: none
         }
     </style>
-    <style id='global-styles-inline-css' type='text/css'>
-    </style>
-    <link rel='stylesheet' id='ok-civ-css' href='resources/style.css' type='text/css' media='all' />
 
     <script>
         (function (h, o, t, j, a, r) {
@@ -237,9 +235,9 @@
     </div>
     <script type="text/javascript" src="resources/jquery.js" id="jquery-js"></script>
     <script src="https://unpkg.com/mustache@latest"></script>
-    <script type="text/javascript" src="resources/script.js" id="v2_scripts-js"></script>
-    <script type="text/javascript" src="projects/data.js"></script>
-    <script type="text/javascript" src="projects/homepage-projects.js"></script>
+    <script type="text/javascript" src="resources/script.js?v=11-27-2024" id="v2_scripts-js"></script>
+    <script type="text/javascript" src="projects/data.js?v=11-27-2024"></script>
+    <script type="text/javascript" src="projects/homepage-projects.js?v=11-27-2024"></script>
 
 </body>
 
