--- a/index.html
+++ b/index.html
@@ -74,9 +74,8 @@
         </button>
     </header>
     <menu class="main-menu" id="menu" role="navigation" style="background-color: transparent;">
-        <ul class="site-menu body-copy"
-            style="background: linear-gradient(90deg, rgba(255, 255, 255, 0) 70%, rgba(0, 0, 0, 0.6) 85%, rgba(0, 0, 0, 0.05) 100%);">
-            <li style="float: right;">
+        <ul class="site-menu body-copy">
+            <li>
                 <h6>
                     <a href="#projects" style="font-size: large;" class="link-to-uri-fragment">პროექტები</a>
                 </h6>
