--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <link rel="preload" href="https://use.typekit.net/zdo1npz.css" as="style" />
     <link rel="stylesheet" href="https://use.typekit.net/zdo1npz.css">
-    <link rel="preload" href="resources/style.css?v=11-27-2024" as="style" />
-    <link rel='stylesheet' id='ok-civ-css' href='resources/style.css?v=11-27-2024' type='text/css' media='all' />
+    <link rel="preload" href="resources/style.css?v=2" as="style" />
+    <link rel='stylesheet' id='ok-civ-css' href='resources/style.css?v=2' type='text/css' media='all' />
     <link rel="preload" href="resources/script.js?v=11-27-2024" as="script" />
     <link rel="preload" href="https://code.jquery.com/jquery-3.2.1.min.js" as="script" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=latin" rel="stylesheet">
@@ -235,6 +235,10 @@
             </div>
         </div>
     </div>
+    <!-- <script>
+        alert("window.innerWidth = " + window.innerWidth);
+        alert("window.outerWidth = " + window.outerWidth);
+    </script> -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js" id="jquery-js"></script>
     <script src="https://unpkg.com/mustache@latest"></script>
     <script type="text/javascript" src="resources/script.js?v=11-27-2024" id="v2_scripts-js"></script>
