<meta http-equiv="Cache-Control" content="no-cache">

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" href="/i/favicon.ico" />
     <meta app-version="1.0-with-app.css-removed" />
+    <meta http-equiv="Cache-Control" content="no-cache">
 
     <link rel="preload" href="https://use.typekit.net/zdo1npz.css" as="style" />
     <link rel="stylesheet" href="https://use.typekit.net/zdo1npz.css">
