change project filter

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" href="/i/favicon.ico" />
     <meta app-version="1.0-with-app.css-removed" />
-    
+
     <link rel="preload" href="https://use.typekit.net/zdo1npz.css" as="style" />
     <link rel="stylesheet" href="https://use.typekit.net/zdo1npz.css">
     <link rel="preload" href="resources/style.css?v=3" as="style" />
@@ -149,28 +149,12 @@
             <section class="projects-wrap">
                 <div class="page-anchor" id="projects" bis_skin_checked="1"></div>
 
-
-
                 <div class="subnav-wrap" bis_skin_checked="1">
                     <div class="subnav project-filters visible" id="project-filters" bis_skin_checked="1">
-                        <div class="show-filters" id="show-filters" bis_skin_checked="1">
-                            <button>პროექტის ფილტრები</button>
-                        </div>
-
-                        <nav class="filter-groups" id="filter-groups">
-                            <div class="select-wrap" bis_skin_checked="1">
-                                <select id="select-type" name="select-type" style="display: none;">
-                                    <option value="all">ყველა</option>
-                                    <option value="apartment">ბინა</option>
-                                    <option value="private-house">სახლი</option>
-                                    <option value="commercial">კომერციული</option>
-                                </select>
-
-                                <label for="select-type">პროექტის ტიპი</label>
-                            </div>
-                        </nav>
-
-                        <button class="close-filters" id="close-filters">პროექტების ნახვა</button>
+                        <button class="project-type-btn" value="all">ყველა პროექტი</button>
+                        <button class="project-type-btn" value="apartment">ბინა</button>
+                        <button class="project-type-btn" value="private-house">სახლი</button>
+                        <button class="project-type-btn" value="commercial">კომერციული</button>
                     </div>
                 </div>
 
